# Albion-Market-Bot

./: .gitignore  README.md  Start Albion Bot Dashboard.bat  Start Albion Bot Dashboard.vbs  calibration_profile.json  capture_log.csv  category_scan_checkpoint.json  market_prices_log.csv  package-lock.json  package.json  pyproject.toml
.electron-user-data/session/: DIPS  Local State
.electron-user-data/session/DawnGraphiteCache/: data_1  index
.electron-user-data/session/DawnWebGPUCache/: data_1  index
.electron-user-data/session/GPUCache/: data_0  data_1  data_2  index
.electron-user-data/session/Session Storage/: LOG  LOG.old
electron/: item-popup-preload.js  itemCatalog.js  main.js  preload.js  status-preload.js
electron/renderer/: index.html  item-popup.css  item-popup.html  item-popup.js  renderer.js  status.css  status.html  status.js  styles.css
scripts/: build-win-versioned.ps1  release-win.ps1
src/albion_bot/: __init__.py  app.py  service_core.py  service_main.py
src/albion_bot/automation/: __init__.py  market_query.py
src/albion_bot/capture/: __init__.py  cursor_position.py  point_selector.py  region_selector.py  screen_capture.py
src/albion_bot/config/: __init__.py  settings.py
src/albion_bot/control/: __init__.py  hotkeys.py
src/albion_bot/logging/: __init__.py  (+1 more)
src/albion_overlay_foundation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_logger.py  test_normalize.py  test_postgres_sink.py  test_scoring.py  test_service_protocol.py  test_session_store.py  test_watchlist_repo.py
(+21 files in other folders)
